# memoraihub-cli

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/cli/: add.rs  browse.rs  config.rs  context.rs  correct.rs  deprecate.rs  extend.rs  gc.rs  init.rs  kbs.rs  mod.rs  notifications.rs  pending.rs  remote_ops.rs  search.rs  serve.rs  show.rs  stats.rs  utils.rs
src/config/: mod.rs
src/core/: fact.rs  kb.rs  mod.rs  multi_storage.rs  notifications.rs  path.rs  pending_queue.rs  search.rs  storage.rs  trust.rs
src/mcp/: jsonrpc.rs  mod.rs  server.rs  state.rs  tools.rs
src/mcp/handlers/: facts.rs  kbs.rs  mod.rs  notifications.rs  search.rs
src/remote/: blocking.rs  client.rs  mod.rs  types.rs
templates/: agents.md.template  copilot-instructions.md.template  readme.md.template
