[package]
name = "meh"
version = "0.1.0"
edition = "2021"
description = "memoraihub-cli - AI Knowledge Management"
license = "Apache-2.0"
repository = "https://github.com/Provagus/memoraihub-cli"
keywords = ["ai", "knowledge", "memory", "cli", "mcp", "memoraihub"]
categories = ["command-line-utilities", "database"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"

# IDs
ulid = { version = "1.1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
directories = "5.0"

# Terminal output
colored = "2.1"
tabled = "0.15"

# MCP (Model Context Protocol) - using simple JSON-RPC implementation
# No additional dependencies needed - using serde_json and tokio

# Async for MCP
async-trait = "0.1"
futures = "0.3"

# HTTP client for remote server
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# URL handling
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "meh"
path = "src/main.rs"

[lib]
name = "meh"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
